--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-MONGO_URI=mongodb+srv://gobynow_123_2:vT5JChy5p4g8A4Ui@cluster0.7abgh0l.mongodb.net/?appName=Cluster0
+MONGO_URI=mongodb+srv://gobynow_123_2:vT5JChy5p4g8A4Ui@cluster0.7abgh0l.mongodb.net/mockdata?appName=Cluster0
 PORT=3000
-JWT_SECRET=your-jwt-secret-key-change-in-production
+JWT_SECRET=code@1234
 EMAIL_USER=infobenchmock@gmail.com
 EMAIL_PASS=zlns edkc iilo fyjn
