--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,8 @@ PORT=3000
 JWT_SECRET=code@1234
 EMAIL_USER=infobenchmock@gmail.com
 EMAIL_PASS=zlns edkc iilo fyjn
+# Cloudinary Config
+CLOUDINARY_CLOUD_NAME=dbzun4bbt
+CLOUDINARY_API_KEY=325472212412361
+CLOUDINARY_API_SECRET=VxdrnkirXX2m9dd_NbvbkLNTP40
+STORAGE_TYPE=cloudinary
