--- a/server/.env
+++ b/server/.env
@@ -8,3 +8,4 @@ CLOUDINARY_CLOUD_NAME=dbzun4bbt
 CLOUDINARY_API_KEY=325472212412361
 CLOUDINARY_API_SECRET=VxdrnkirXX2m9dd_NbvbkLNTP40
 STORAGE_TYPE=cloudinary
+CLIENT_URL=https://interviewmock-frontend.onrender.com
