--- a/server/.env
+++ b/server/.env
@@ -8,7 +8,7 @@ CLOUDINARY_CLOUD_NAME=dbzun4bbt
 CLOUDINARY_API_KEY=325472212412361
 CLOUDINARY_API_SECRET=VxdrnkirXX2m9dd_NbvbkLNTP40
 STORAGE_TYPE=cloudinary
-CLIENT_URL=https://interviewmock-frontend.onrender.com
+CLIENT_URL=https://interviewmock.vercel.app
 
 # Email Service (Resend)
 RESEND_API_KEY=re_K7DHQqXk_Ek4YtViWGgemUxbTxZS6Fbr9
