--- a/server/.env.example
+++ b/server/.env.example
@@ -21,3 +21,8 @@ EMAIL_FROM=onboarding@resend.dev
 CLOUDINARY_CLOUD_NAME=...
 CLOUDINARY_API_KEY=...
 CLOUDINARY_API_SECRET=...
+
+# Razorpay
+RAZORPAY_KEY_ID=rzp_test_...
+RAZORPAY_KEY_SECRET=...
+
