--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.11",
     "nodemon": "^3.1.7",
+    "razorpay": "^2.9.6",
     "socket.io": "^4.8.1",
     "socketio": "^1.0.0",
     "uuid": "^11.0.3"
