updated some dashborad and admin and expert

--- a/server/.env
+++ b/server/.env
@@ -13,3 +13,5 @@ CLIENT_URL=https://interviewmock.vercel.app
 # Email Service (Resend)
 RESEND_API_KEY=re_K7DHQqXk_Ek4YtViWGgemUxbTxZS6Fbr9
 EMAIL_FROM=onboarding@resend.dev
+
+NODE_ENV=development
