--- a/server/.env
+++ b/server/.env
@@ -15,3 +15,6 @@ RESEND_API_KEY=re_K7DHQqXk_Ek4YtViWGgemUxbTxZS6Fbr9
 EMAIL_FROM=onboarding@resend.dev
 
 NODE_ENV=development
+
+# Google OAuth Config
+GOOGLE_CLIENT_ID=668152410786-lp0bfdv3pb08oa0sfhdemjil1qoeu9k7.apps.googleusercontent.com
