--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "mockeefy",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -40,6 +40,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-oauth/google": "^0.13.4",
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.16",
     "@tailwindcss/vite": "^4.1.17",
