--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.6.1",
     "express": "^4.21.1",
+    "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.21.0",
     "multer": "^1.4.5-lts.1",
